--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <a class="hero__bttn" href="#">Shop Meditation Set</a>
           </div>
           <div class="hero__image _ibg">
-            <img src="/image/hero/hero-bg.jpg" alt="background" class="hero-bg" />
+            <img src="./image/hero/hero-bg.jpg" alt="background" class="hero-bg" />
           </div>
         </section>
 
@@ -71,31 +71,31 @@
           <div class="swiper mySwiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="/image/features/features-1.jpg" />
+                <img src="./image/features/features-1.jpg" />
               </div>
               <div class="swiper-slide">
-                <img src="/image/features/features-2.jpg" />
+                <img src="./image/features/features-2.jpg" />
               </div>
               <div class="swiper-slide">
-                <img src="/image/features/features-3.jpg" />
+                <img src="./image/features/features-3.jpg" />
               </div>
               <div class="swiper-slide">
-                <img src="/image/features/features-4.jpg" />
+                <img src="./image/features/features-4.jpg" />
               </div>
               <div class="swiper-slide">
-                <img src="/image/features/features-5.jpg" />
+                <img src="./image/features/features-5.jpg" />
               </div>
               <div class="swiper-slide">
-                <img src="/image/features/features-6.jpg" />
+                <img src="./image/features/features-6.jpg" />
               </div>
               <div class="swiper-slide">
-                <img src="/image/features/features-7.jpg" />
+                <img src="./image/features/features-7.jpg" />
               </div>
               <div class="swiper-slide">
-                <img src="/image/features/features-8.jpg" />
+                <img src="./image/features/features-8.jpg" />
               </div>
               <div class="swiper-slide">
-                <img src="/image/features/features-9.jpg" />
+                <img src="./image/features/features-9.jpg" />
               </div>
             </div>
             <div class="swiper-pagination"></div>
@@ -120,31 +120,31 @@
           <div class="swiper mySwiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="/image/goods/goods-1.jpg" />
+                <img src="./image/goods/goods-1.jpg" />
               </div>
               <div class="swiper-slide">
-                <img src="/image/goods/goods-2.jpg" />
+                <img src="./image/goods/goods-2.jpg" />
               </div>
               <div class="swiper-slide">
-                <img src="/image/goods/goods-3.jpg" />
+                <img src="./image/goods/goods-3.jpg" />
               </div>
               <div class="swiper-slide">
-                <img src="/image/goods/goods-4.jpg" />
+                <img src="./image/goods/goods-4.jpg" />
               </div>
               <div class="swiper-slide">
-                <img src="/image/goods/goods-5.jpg" />
+                <img src="./image/goods/goods-5.jpg" />
               </div>
               <div class="swiper-slide">
-                <img src="/image/goods/goods-6.jpg" />
+                <img src="./image/goods/goods-6.jpg" />
               </div>
               <div class="swiper-slide">
-                <img src="/image/goods/goods-7.jpg" />
+                <img src="./image/goods/goods-7.jpg" />
               </div>
               <div class="swiper-slide">
-                <img src="/image/goods/goods-8.jpg" />
+                <img src="./image/goods/goods-8.jpg" />
               </div>
               <div class="swiper-slide">
-                <img src="/image/goods/goods-9.jpg" />
+                <img src="./image/goods/goods-9.jpg" />
               </div>
             </div>
             <div class="swiper-pagination"></div>
@@ -228,31 +228,31 @@
           <div class="swiper mySwiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="/image/advantages/advanteges-1.jpg" />
+                <img src="./image/advantages/advanteges-1.jpg" />
               </div>
               <div class="swiper-slide">
-                <img src="/image/advantages/advanteges-2.jpg" />
+                <img src="./image/advantages/advanteges-2.jpg" />
               </div>
               <div class="swiper-slide">
-                <img src="/image/advantages/advanteges-3.jpg" />
+                <img src="./image/advantages/advanteges-3.jpg" />
               </div>
               <div class="swiper-slide">
-                <img src="/image/advantages/advanteges-4.jpg" />
+                <img src="./image/advantages/advanteges-4.jpg" />
               </div>
               <div class="swiper-slide">
-                <img src="/image/advantages/advanteges-5.jpg" />
+                <img src="./image/advantages/advanteges-5.jpg" />
               </div>
               <div class="swiper-slide">
-                <img src="/image/advantages/advanteges-6.jpg" />
+                <img src="./image/advantages/advanteges-6.jpg" />
               </div>
               <div class="swiper-slide">
-                <img src="/image/advantages/advanteges-7.jpg" />
+                <img src="./image/advantages/advanteges-7.jpg" />
               </div>
               <div class="swiper-slide">
-                <img src="/image/advantages/advanteges-8.jpg" />
+                <img src="./image/advantages/advanteges-8.jpg" />
               </div>
               <div class="swiper-slide">
-                <img src="/image/advantages/advanteges-9.jpg" />
+                <img src="./image/advantages/advanteges-9.jpg" />
               </div>
             </div>
             <div class="swiper-pagination"></div>
